# MyResume

./: README.md
Client/: .clang-format  .gitignore  TestClient.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagecontroller.cpp  messagecontroller.h  socketcontroller.cpp  socketcontroller.h
Server/: .clang-format  CMakeLists.txt  client.h  common.cpp  common.h  config.h  device.cpp  device.h  main.cpp  server.cpp  server.h  worker.cpp  worker.h
